--- a/front-end/src/app/pages/gym-list/gym-list.page.html
+++ b/front-end/src/app/pages/gym-list/gym-list.page.html
@@ -29,21 +29,30 @@
               </ion-item>             
               <ion-item>
                 <ion-icon name="location-outline"></ion-icon>
-                <ion-label color="dark"><h3>Location of Map</h3> </ion-label>
+                <ion-label color="dark" (click)="gymLocationOnMap(gym._id)"><h3>Location of Map</h3> </ion-label>
               </ion-item> 
-            <!--  /* Get Id from here pass that to function and click to google map 
-                https://maps.google.com/?q=<lat>,<lng></lng>*/  -->
-                    
-           </ion-list> 
+          </ion-list> 
         </ion-item> 
               <ion-button 
                 fill="outline"  
                 shape="round"  
                 expand="full"
                 (click)="addMember(gym._id)" 
-                 >
-                  <ion-icon slot="icon-only" name="checkmark-outline"></ion-icon> add Members </ion-button>
-    </div>
+                 ><ion-icon slot="icon-only" name="checkmark-outline"></ion-icon> add Members </ion-button>
+
+                 <ion-button
+                 class="ion-margin" 
+                 expand="block"
+                 appTap
+                 (doubleTap)="onDoubleTap(gym._id,$event)">
+                 DOUBLE TAP GESTURE
+               </ion-button>
+   
+    
+                </div>
+
+    
+
   </ion-list>
 
   <ion-fab  vertical="bottom" horizontal="end" slot="fixed">
