--- a/front-end/src/app/pages/member-list/member-list.page.html
+++ b/front-end/src/app/pages/member-list/member-list.page.html
@@ -39,31 +39,36 @@
               <ion-card-header appSwipe
               (swipe)="onSwipe(m._id,$event)"
               SWIPE GESTURE>
-              <ion-badge>{{m.memberType}}</ion-badge>            
+                          
                 <ion-card-title>
-                  {{m.m_name}}                   
+                  <ion-item>
+                    <ion-avatar slot="start">
+                      <ion-img src="https://i.pravatar.cc/300?u=b"></ion-img>
+                    </ion-avatar>
+                    <ion-label>
+                      <h2>{{m.m_name}}</h2>
+                      <ion-badge>{{m.memberType}}</ion-badge>
+                      <p (click)="CallTel(m.mobile)"><ion-icon name="call"></ion-icon>{{m.mobile}}</p>
+                    </ion-label>
+                  </ion-item>
+                                     
                 </ion-card-title>
                 <ion-card-subtitle>
-                  <p (click)="CallTel(m.mobile)"><ion-icon name="call"></ion-icon>{{m.mobile}}</p>                                
-                </ion-card-subtitle>
-              </ion-card-header>
-            
-              <ion-card-content>
-                 <!-- <p>Balance Days {{m.m_validdays}} </p> --> 
-                <div>
-                  <ion-grid>
-                    <ion-grid>
+                   <ion-grid>
                       <ion-row>
                         <ion-col color="danger">Balance :{{m.m_validdays}} Day(s)</ion-col>
                         <ion-col color="danger">End Date:{{m.m_enddate | date }}</ion-col>
                         <ion-col color="danger">Start Time:{{m.m_intime | date:'shortTime' }}</ion-col>
                         <ion-col color="danger">Finish Time:{{m.m_outtime | date:'shortTime' }}</ion-col>
                       </ion-row>
-                    </ion-grid>
-                   
-                  </ion-grid>               
-                               
-                </div>
+                    </ion-grid>                       
+                </ion-card-subtitle>
+              </ion-card-header>
+            
+              <!-- <ion-card-content>
+                 <!-- <p>Balance Days {{m.m_validdays}} </p> --> 
+                <!-- <div>     
+                </div> -->
                 
                  <!-- <p>unique ID {{m._id}} </p>  -->
                  <!-- <p>
@@ -72,7 +77,7 @@
                   </ion-button>
                  </p> -->
 
-                 <!-- <a [routerLink]="['/member/', m._id]">{{ m._id }}</a> -->
+                 <!-- <a [routerLink]="['/member/', m._id]">{{ m._id }}</a>
               </ion-card-content> 
               <!-- <ion-item>
                 <ion-range aria-label="Custom range" [value]={rangeValue} [pin]="true"></ion-range>
@@ -143,13 +148,13 @@
     DOUBLE TAP GESTURE
   </ion-button>
 
-  <!-- <ion-button
+  <ion-button
     class="ion-margin" 
     expand="block"
     appPress
     (press)="onPress($event)">
     LONG PRESS GESTURE
-  </ion-button> -->
+  </ion-button>
 
   <!-- <ion-button
     class="ion-margin" 
