--- a/front-end/src/app/pages/infor/infor.page.html
+++ b/front-end/src/app/pages/infor/infor.page.html
@@ -79,10 +79,10 @@ class="ion-no-border"
                        
         <ion-item>
           <ion-label color="dark"><h2>Want to Update Lock ID?</h2> </ion-label>
-              <ion-toggle aria-label="Primary toggle" color="primary" [checked]="false"></ion-toggle>
+              <ion-toggle aria-label="Primary toggle" color="primary" [disabled]="lockIDtoggleTrigger" [checked]="lockIDtoggleTrigger" (ionChange)="lockIdToggle($event)"></ion-toggle>
         </ion-item>
 
-        <ion-item href="#">
+        <ion-item href="http://localhost:8100/qrlabel">
             <ion-label color="dark"><h2>Download QR code for Selected Gym </h2></ion-label>
         </ion-item>
 
@@ -92,7 +92,7 @@ class="ion-no-border"
   </div>
   
   <div class="div-0">
-    <ion-label color="dark"><h2>Gym Setup</h2></ion-label>
+    <ion-label color="dark"><h2>Gym Setup ...under development..</h2></ion-label>
     <ion-list>
           <ion-item>
             <ion-label color="dark"> <h2>App User Data Storage limit .... 90 Days</h2> </ion-label>
