--- a/front-end/src/app/pages/me/me.page.scss
+++ b/front-end/src/app/pages/me/me.page.scss
@@ -22,8 +22,7 @@
 
     .div-1 {
          
-        background: #c7c7d3;
-          
+        // background;          
         
         margin-top:40px;
         margin-right: 10px;
@@ -34,14 +33,14 @@
         padding-left: 5px;
 
         border-radius: 20px;
-        border: 0.1px solid #000000;
-        min-height: 500px; 
+        border: 0.1px solid #2702f8;
+        min-height: 200px; 
       }
 
       .ion-item-1 {
             padding-top:10px;
         --margin-top: -11px; 
-        --background: #c9ccda;
+        // --background: #ffffff;
         // --color: #0c0f27;
          
         // --top-padding: 5px;
