--- a/front-end/src/app/pages/memberinfor/memberinfor.page.html
+++ b/front-end/src/app/pages/memberinfor/memberinfor.page.html
@@ -56,26 +56,11 @@ class="ion-no-border"
   </div>
 
   <div class="div-0">
-    <ion-label color="dark"><h2>Recharge</h2> 
-  </ion-label>
+    <ion-label color="dark"><h2>Recharge</h2></ion-label>  
+    <ion-item>        
+      <ion-button fill="solid"  expand="block" (click)="rechargeRequestAlert()">Recharge Request</ion-button>
+    </ion-item>  
     
-    <ion-item>    
-      <ion-list>
-                       
-        <ion-item>
-          <ion-icon name="trending-up-outline"></ion-icon>
-          <ion-label color="dark"><h2>Enter Days</h2> </ion-label>
-         
-          <ion-input label="Enter Days" type="number" placeholder="000"></ion-input> 
-        </ion-item>
-
-        <ion-item>
-            <ion-button>Recharge Request</ion-button>
-        </ion-item>
-
-      </ion-list>
- 
-    </ion-item>    
   </div> 
 
   
