--- a/front-end/src/app/pages/me/me.page.html
+++ b/front-end/src/app/pages/me/me.page.html
@@ -18,36 +18,55 @@
       <!-- <ion-icon slot="start" name="person-outline"></ion-icon> -->
       <!-- <ion-img class=“profile-photo” (click)="getImage()" src=""></ion-img> -->
       <ion-label color="dark">
-        <h2>Name</h2>
+        <h2>{{loggeduserUsername}}</h2>
       </ion-label>
       <!-- <ion-icon slot="end"  name="chevron-forward-outline"></ion-icon> -->
     </ion-item>
 
     
   </div>
-  <div class="div-1">
-    <ion-item class="ion-item-1" href="#">
-      <ion-icon slot="start"  name="barbell-sharp"></ion-icon>
-      <ion-label color="dark">
-        <h2>Gym Management</h2>
-      </ion-label>
-      <!-- <ion-icon slot="end"  name="chevron-forward-outline"></ion-icon> -->
-    </ion-item> 
-  
+  <div class="div-1">     
+      <ion-label><ion-icon slot="start"  name="barbell-sharp"></ion-icon><h2>Gym Management</h2> 
+        </ion-label>
+        <ion-list [inset]="true" lines="none">
+          <ion-item>
+            <ion-label>
+              <p>Gym Name : {{gymName}}</p>
+            </ion-label>
+          </ion-item>
 
+          <ion-item>
+            <ion-label>
+              <p>Gym Emergency Mobile No. : {{gymEmergencyMobile}}</p>
+            </ion-label>
+          </ion-item>
+
+          <ion-item>
+            <ion-label>
+              <p>Gym Location on Google Map</p>
+            </ion-label>
+          </ion-item>
+
+        </ion-list>
+    </div>  
+      <!-- <ion-icon slot="end"  name="chevron-forward-outline"></ion-icon> -->
+     
+  
+<div class="div-1">
     <ion-item class="ion-item-1"   href="#">
       <ion-icon slot="start" name="mail-unread"></ion-icon>
       <ion-label color="dark">
-        <h2>Message Center</h2>
+        <h2 color="primary">Message Center</h2>
       </ion-label>
       <!-- <ion-icon slot="end"  name="chevron-forward-outline"></ion-icon> -->
     </ion-item> 
- 
+</div>
 
-    <ion-item class="ion-item-1"  href="#">
+<div class="div-1">
+    <ion-item color="primary" class="ion-item-1"  href="#">
       <ion-icon slot="start" name="reader-outline"></ion-icon>
       <ion-label color="dark">
-        <h2>FAQ & Feedback </h2>
+        <h2  >FAQ & Feedback </h2>
       </ion-label>
       <!-- <ion-icon slot="end"  name="chevron-forward-outline"></ion-icon> -->
     </ion-item> 
