--- a/front-end/src/app/home/home.page.html
+++ b/front-end/src/app/home/home.page.html
@@ -1,8 +1,7 @@
 <ion-header>
     <ion-toolbar color="primary">
       <ion-title>
-        Welcome to My GYM {{username}}!
-        
+        Welcome to My GYM {{username}}        
       </ion-title>
     </ion-toolbar>
   </ion-header>
