--- a/front-end/src/app/pages/gymtabs/gymtabs.page.html
+++ b/front-end/src/app/pages/gymtabs/gymtabs.page.html
@@ -1,18 +1,19 @@
-<ion-tabs>
+<ion-tabs #gymtabs (ionTabsDidChange)="setCurrentTab()">
   <ion-tab-bar slot="bottom">
+
     <ion-tab-button tab="member-list">
-      <ion-icon name="Person"></ion-icon>
+      <ion-icon [name]="selectedTab == 'member-list'? 'people':'people-outline'"></ion-icon>
       <ion-label>Members</ion-label>
     </ion-tab-button>
 
-
+    
     <ion-tab-button tab="infor">
-      <ion-icon name="home"></ion-icon>
+      <ion-icon [name]="selectedTab=='infor'?'fitness':'fitness-outline'"></ion-icon>
       <ion-label>My Gym</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="me">
-      <ion-icon name="person"></ion-icon>
+      <ion-icon [name]="selectedTab=='me'? 'person': 'person-outline'"></ion-icon>
       <ion-label>Me</ion-label>
     </ion-tab-button>
 
