--- a/front-end/src/app/pages/member-list/member-list.page.html
+++ b/front-end/src/app/pages/member-list/member-list.page.html
@@ -41,16 +41,19 @@
               SWIPE GESTURE>                          
                 <ion-card-title>
                   <ion-item>
+                    <ion-icon slot="start" name="chevron-forward-outline" (click)="inviteMember(m._id)"></ion-icon>
                     <ion-avatar slot="start">
                       <ion-img src="https://i.pravatar.cc/300?u=b"></ion-img>
                     </ion-avatar>
                     <ion-label>
-                      <h2>{{m.m_name}}</h2>
-                      <ion-badge>{{m.memberType}}</ion-badge>
+                      <h2>{{m.m_name}}</h2>                      
+                      <ion-badge>{{m.memberType}}</ion-badge>                       
                       <p (click)="CallTel(m.mobile)"><ion-icon name="call"></ion-icon>{{m.mobile}}</p>
                     </ion-label>
+                    
+                    <ion-icon slot="end"  name="chevron-back-outline" (click)="updateMember(m._id)"></ion-icon>
                   </ion-item>
-                                     
+                       
                 </ion-card-title>
                 <ion-card-subtitle>
                    <ion-grid>
