--- a/front-end/src/app/pages/qrlabel/qrlabel.page.html
+++ b/front-end/src/app/pages/qrlabel/qrlabel.page.html
@@ -1,111 +1,46 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>qrlabel</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="pagebg" [fullscreen]="true">
+    <div id="bg">
+            <ion-label ><h1 class="p">WELCOME</h1>
+                        <h1 class="p">TO</h1>
+                        <h1 class="p">{{gymname | uppercase }}</h1>
+            </ion-label>
+    </div>
+    <div class="div-1">
+        <ion-list  lines="none" class="ion-margin">
+        <ion-label><h1 class="p1">SCAN ME</h1></ion-label>
+        <ion-item >
+            <div class="center">
+            <!-- <ion-img src="https://i.pravatar.cc/300?u=b"></ion-img> -->
+            <qrcode 
+            [qrdata]= 'gymIdforQRcode'
+            [width]="225" 
+            [cssClass]="'center'"
+            [errorCorrectionLevel]="'M'">
+                            </qrcode>
+            </div>
+        </ion-item>
+        <ion-text ><h2 class="p2">TO GET GYM ACCESS</h2></ion-text>          
+        </ion-list>
 
-<ion-content>
-  <div class="container">
-    <!-- <div id="pdfTable" #pdftable=""> -->
-    <div class="pdfTable" id="pdfTable" >
+                
+    </div>
+    <div class="div-2">
+        <!-- <ion-item class=" item-1">
+            <ion-list lines="none" class="ion-margin">
+                <!-- <h3 class="p3"> DOWNLOAD THE APP. </h3> -->
+                <!-- <h3 class= "p3"> GYM ACCESS CONTROl.</h3> -->
+                <!-- <p slot="end"> powered by <ion-img src="https://i.pravatar.cc/300?u=b"></ion-img></p>               
+            </ion-list>
+        </ion-item> -->
+    </div>
 
 
-  <table class= "table" style="border-collapse:collapse;border:none;">
-    <tbody>
-        <tr>
-            <td rowspan="3" style="width: 111.75pt;border: 1pt solid windowtext;padding: 0cm 5.4pt;height: 21.35pt;vertical-align: top;">
-                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";text-align:center;'><span style='font-size:27px;font-family:"Eras Bold ITC","sans-serif";'>LOGO</span></p>
-            </td>
-            <td style="width: 259.7pt;border-color: windowtext windowtext windowtext currentcolor;border-style: solid solid solid none;border-width: 1pt 1pt 1pt medium;border-image: none 100% / 1 / 0 stretch;padding: 0cm 5.4pt;height: 21.35pt;vertical-align: top;">
-                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";text-align:center;'><span style='font-size:27px;font-family:"Eras Bold ITC","sans-serif";'>WELCOME</span></p>
-            </td>
-            <td rowspan="3" style="width: 90.65pt;border-color: windowtext windowtext windowtext currentcolor;border-style: solid solid solid none;border-width: 1pt 1pt 1pt medium;border-image: none 100% / 1 / 0 stretch;padding: 0cm 5.4pt;height: 21.35pt;vertical-align: top;">
-                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:  normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:  normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:  normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-            </td>
-        </tr>
-        <tr>
-            <td style="width: 259.7pt;border-color: currentcolor windowtext windowtext currentcolor;border-style: none solid solid none;border-width: medium 1pt 1pt medium;padding: 0cm 5.4pt;height: 4.4pt;vertical-align: top;">
-                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";text-align:center;'><span style='font-size:9px;font-family:"Eras Bold ITC","sans-serif";'>Smart Gym</span></p>
-            </td>
-        </tr>
-        <tr>
-            <td style="width: 259.7pt;border-color: currentcolor windowtext windowtext currentcolor;border-style: none solid solid none;border-width: medium 1pt 1pt medium;padding: 0cm 5.4pt;height: 15.4pt;vertical-align: top;">
-                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";text-align:center;'><span style='font-family:"Eras Bold ITC","sans-serif";'>My Gym</span></p>
-            </td>
-        </tr>
-        <tr>
-            <td colspan="3" style="width: 462.1pt;border-color: currentcolor windowtext windowtext;border-style: none solid solid;border-width: medium 1pt 1pt;border-image: none 100% / 1 / 0 stretch;padding: 0cm 5.4pt;height: 561pt;vertical-align: top;">
-                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:  normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:  normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:  normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:  normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:  normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:  normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                <table style="margin-left:66.35pt;border-collapse:collapse;border:none;">
-                    <tbody>
-                        <tr>
-                            <td style="width: 313.8pt;border: 1pt solid windowtext;padding: 0cm 5.4pt;height: 385.8pt;vertical-align: top;">
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:  normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:  normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:  normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:  normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:  normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:  normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:  normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-            </td>
-        </tr>
-        <tr>
-            <td colspan="3" style="width: 462.1pt;border-color: currentcolor windowtext windowtext;border-style: none solid solid;border-width: medium 1pt 1pt;border-image: none 100% / 1 / 0 stretch;padding: 0cm 5.4pt;height: 17.45pt;vertical-align: top;">
-                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:normal;font-size:15px;font-family:"Calibri","sans-serif";text-align:center;'><span style='font-family:"Arial Black","sans-serif";'>Scan to Unlock</span></p>
-            </td>
-        </tr>
-        <tr>
-            <td colspan="3" style="width: 462.1pt;border-color: currentcolor windowtext windowtext;border-style: none solid solid;border-width: medium 1pt 1pt;border-image: none 100% / 1 / 0 stretch;padding: 0cm 5.4pt;height: 37.5pt;vertical-align: top;">
-                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:  normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:  normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-                <p style='margin-top:0cm;margin-right:0cm;margin-bottom:.0001pt;margin-left:0cm;line-height:  normal;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-            </td>
-        </tr>
-    </tbody>
-</table>
-<p style='margin-top:0cm;margin-right:0cm;margin-bottom:10.0pt;margin-left:0cm;line-height:115%;font-size:15px;font-family:"Calibri","sans-serif";'>&nbsp;</p>
-
-</div>
-<button class="btn btn-primary" (click)="exportPDF();">Export To PDF</button>
-</div>
-</ion-content>
+  </ion-content>
+  <ion-footer>
+    <ion-toolbar>
+        <ion-button expand = "block" shape="round" strong="true" class="ion-margin-end" color="primary">
+            DOWNLOAD NOW
+            <ion-icon slot="end" name="cloud-download"></ion-icon>
+          </ion-button>
+    </ion-toolbar>
+  </ion-footer>
