--- a/front-end/src/app/pages/infor/infor.page.html
+++ b/front-end/src/app/pages/infor/infor.page.html
@@ -95,7 +95,7 @@ class="ion-no-border"
     <ion-label color="dark"><h2>Gym Setup ...under development..</h2></ion-label>
     <ion-list>
           <ion-item>
-            <ion-label color="dark"> <h2>App User Data Storage limit .... 90 Days</h2> </ion-label>
+            <ion-label color="dark"> <h2 (click)="addmoregym()">Add More Gym </h2> </ion-label>
           </ion-item>
 
           <ion-item >      
