--- a/front-end/src/app/pages/me/me.page.html
+++ b/front-end/src/app/pages/me/me.page.html
@@ -125,5 +125,10 @@
   </ion-item> -->
 
 </ion-content>
+<ion-footer>
+  <ion-toolbar>
+      <ion-button expand="block" (click)="logout()">Log Out</ion-button>
+  </ion-toolbar>
+</ion-footer>
 
 <!--  make Feedback page add whatsapp link in feedback page  -->
