--- a/front-end/src/app/pages/qrlabel/qrlabel.page.html
+++ b/front-end/src/app/pages/qrlabel/qrlabel.page.html
@@ -11,12 +11,12 @@
         <ion-item >
             <div class="center">
             <!-- <ion-img src="https://i.pravatar.cc/300?u=b"></ion-img> -->
-            <qrcode 
+            <!-- <qrcode 
             [qrdata]= 'gymIdforQRcode'
             [width]="225" 
             [cssClass]="'center'"
             [errorCorrectionLevel]="'M'">
-                            </qrcode>
+                            </qrcode> -->
             </div>
         </ion-item>
         <ion-text ><h2 class="p2">TO GET GYM ACCESS</h2></ion-text>          
