--- a/front-end/src/app/pages/gymtabs/gymtabs.page.scss
+++ b/front-end/src/app/pages/gymtabs/gymtabs.page.scss
@@ -1,35 +1,25 @@
+ion-tabs {
+// background: var(--ion-color-secondary);
 ion-tab-bar {
+  position:relative;
+  width:90%;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  border-radius: 30px;
+  border: 1px solid rgba(54, 10, 2, 0.08);
+  overflow:hidden;
+  padding-bottom: 0px;
+  box-shadow: 0px -5px 10px rgba(181, 3, 3, 0.08);
+  --background:var(--ion-color-light);
+  ion-tab-button{
+    --background:var(--ion-color-light);
+    // --color:#BEC2C6;
+    ion-icon{
+      font-size:1.9rem;
+    }
+  }
 
-    --background:transparent;
-    --border: 10px;	
-    --color:primary;
-  >ion-tab-button:nth-of-type(1) {
-    --background:
-    --background-focused:
-    --background-focused-opacity:
-    --color	:
-    --color-focused	:
-    --color-selected:
-    --padding-bottom:
-    --padding-end:
-    --padding-start:
-    --padding-top:
-    --ripple-color:
-    >ion-icon {
-    }
-    >ion-label {
-    }
+}    
   }
-  >ion-tab-button:nth-of-type(2) {
-    >ion-icon {
-    }
-    >ion-label {
-    }
-  }
-  >ion-tab-button:nth-of-type(3) {
-    >ion-icon {
-    }
-    >ion-label {
-    }
-  }
-}
+
+
