--- a/front-end/src/app/pages/qrlabel/qrlabel.page.scss
+++ b/front-end/src/app/pages/qrlabel/qrlabel.page.scss
@@ -5,7 +5,8 @@
 #bg {
     height: 25%;
     width: 100%;
-    background: var(--ion-color-primary) url('/assets/img/qrGym.jpg') no-repeat center center/cover;
+    background: var(--ion-color-primary);
+    background-image: url("/assets/img/qrlabel.jpg") no-repeat center center/cover;
     border-radius: 0 0 45% 45%;
     margin-left: 1px;
     position: relative;
