--- a/front-end/src/app/pages/member-details/member-details.page.html
+++ b/front-end/src/app/pages/member-details/member-details.page.html
@@ -17,17 +17,17 @@
 
     <ion-card-content>
       <dl>
-        <dt><ion-icon name="calendar-outline"></ion-icon>Subscription Expiry Date:</dt>
+        <!-- <dt><ion-icon name="calendar-outline"></ion-icon>Subscription Expiry Date:</dt>
         <dd>{{member.m_enddate}}</dd>
 
         <dt><ion-icon name="timer-outline"></ion-icon>Allowed Time In:</dt>
         <dd>{{member.m_intime}}</dd>
 
         <dt><ion-icon name="time-outline"></ion-icon>Allowed Time Out:</dt>
-        <dd>{{member.m_outtime}}</dd>
+        <dd>{{member.m_outtime}}</dd> -->
 
         <dt><ion-icon name="mail-open-outline"></ion-icon>Invitation Status:</dt>
-        <dd>{{member.isInviteAccepted}}</dd>
+        <dd>{{member.isInviteAccepted}} Accepted </dd>
 
         <dt><ion-icon name="key-outline"></ion-icon>Access Type Paid/Free:</dt>
         <dd>{{member.m_accesstype}}</dd>
